# paramclasses

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
mypy/: plugin.py  test.py
mypy/plugins/: paramclasses.py
paramclasses/: __init__.py  paramclasses.py
test/: conftest.py  test_paramclass.py  test_paramclasses.py  test_protection.py
test/paramclasses/: conftest.py  test_breaking_protection.py  test_conftest.py  test_getsetdel_behaviour.py  test_paramclasses.py  test_protection.py  test_signature.py  test_typing.py
