[project]
name = "paramclasses"
version = "0.1.0"
description = "Parameter-holding classes with robust subclassing protection"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = []


[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
'test/**/*.py' = [
    'INP001',   # Test directories are not namespace packages
    'S101',     # Pytest tests can use `assert`
]

[tool.ruff.format]
docstring-code-format = true  # Enable reformatting of code snippets in docstrings.


[tool.mypy]
files = "."


[tool.pytest.ini_options]
testpaths = "test"
addopts = [
    "--import-mode=importlib",  # Recommended by pytest
    "--cov=paramclasses",
    "--cov-report=term-missing",
]


[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
