[project]
name = "paramclasses"
version = "0.4.4.dev2"
description = "Parameter-holding classes with robust subclassing protection"
readme = "README.md"
requires-python = ">=3.10, <3.16"
authors = [{name = "Élie Goudout", email = "eliegoudout@hotmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/eliegoudout/paramclasses"
Issues = "https://github.com/eliegoudout/paramclasses/issues"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=7.4.0",
    "pytest-cov>=6.0.0",
]

[tool.uv]
# Adjust indirect dependencies lower bound
constraint-dependencies = [
    "iniconfig>=1.0.0", # pytest<8.4
    "packaging>=21.0", # pytest<8.4
    "pluggy>=1.0.0", # pytest<8.0.0
    "pyparsing>=2.4.7", # pytest > packaging
]


[tool.ruff.lint]
select = ["ALL"]
ignore = ["D416"]  # NumPy docstyle

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
    "ANN001",                # No need for tests arguments type
    "INP001",                # Test directories are not namespace packages
    "N802", "N803", "N806",  # Fixtures and variables may be capitalized
    "S101",                  # Pytest tests can use `assert`
]
"test/**/test_*.py" = [
    "ANN201",                # No need for tests return type
    "PLR0913",               # Many fixtures needed sometimes
]

[tool.ruff.format]
docstring-code-format = true  # Enable reformatting of code snippets in docstrings.
preview = true


[tool.mypy]
files = ["paramclasses", "test"]


[tool.pytest.ini_options]
testpaths = "test"
addopts = [
    "--import-mode=importlib",  # Recommended by pytest
    "--cov",
]

[tool.coverage.run]
source = ["paramclasses", "test"]

[tool.coverage.report]
precision = 2
skip_empty = true
show_missing = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
